[gd_scene load_steps=22 format=2]

[ext_resource path="res://Interior/Sprites/windows FRAMES.png" type="Texture" id=1]
[ext_resource path="res://Interior/Sprites/clock 1.png" type="Texture" id=2]
[ext_resource path="res://Interior/Sprites/picture 1.png" type="Texture" id=3]
[ext_resource path="res://Interior/Sprites/shelfs FRAMES.png" type="Texture" id=4]
[ext_resource path="res://Interior/Sprites/curtains FRAMES.png" type="Texture" id=5]
[ext_resource path="res://Mixed/Tilemaps/fence.tres" type="TileSet" id=6]
[ext_resource path="res://Interior/Tilemaps/outerwalls.tres" type="TileSet" id=7]
[ext_resource path="res://Interior/Tilemaps/carpets.tres" type="TileSet" id=8]
[ext_resource path="res://Interior/Tilemaps/walls and floors.tres" type="TileSet" id=9]
[ext_resource path="res://Interior/Objects/Beds FRAMES.tscn" type="PackedScene" id=10]
[ext_resource path="res://Interior/Tilemaps/wall roof.tres" type="TileSet" id=11]
[ext_resource path="res://GUI/Fade.tscn" type="PackedScene" id=12]
[ext_resource path="res://Interior/Objects/png/doors FRAMES.png" type="Texture" id=13]
[ext_resource path="res://Interior/Objects/BookShelf FRAMES.tscn" type="PackedScene" id=14]
[ext_resource path="res://Interior/Objects/fireplace.tscn" type="PackedScene" id=15]
[ext_resource path="res://GUI/Main Menu.gd" type="Script" id=16]
[ext_resource path="res://Maps/background.tscn" type="PackedScene" id=17]
[ext_resource path="res://GUI/Theme/screen Effect.tscn" type="PackedScene" id=18]
[ext_resource path="res://GUI/Theme/screen Effect.gd" type="Script" id=19]
[ext_resource path="res://Interior/Objects/bench vertical FRAMES.tscn" type="PackedScene" id=20]
[ext_resource path="res://Interior/Objects/Table 2 FRAMES.tscn" type="PackedScene" id=21]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )

[node name="Background" type="Node2D" parent="."]
position = Vector2( -93, -183 )
scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" parent="Background" instance=ExtResource( 17 )]
position = Vector2( -712, -436 )

[node name="Tilemaps" type="Node2D" parent="Background"]
__meta__ = {
"_edit_lock_": true
}

[node name="outerwalls" type="TileMap" parent="Background/Tilemaps"]
tile_set = ExtResource( 7 )
cell_size = Vector2( 48, 48 )
cell_custom_transform = Transform2D( 48, 0, 0, 48, 0, 0 )
format = 1
tile_data = PoolIntArray( 196609, 0, 65536, 196610, 0, 2, 196611, 0, 2, 196612, 0, 2, 196613, 0, 2, 196614, 0, 2, 196615, 0, 2, 196616, 0, 2, 196617, 0, 2, 196618, 0, 2, 196619, 0, 2, 196620, 0, 65540, 262145, 0, 131072, 262146, 0, 196611, 262147, 0, 262146, 262148, 0, 262146, 262149, 0, 262146, 262150, 0, 262146, 262151, 0, 262146, 262152, 0, 262146, 262153, 0, 262146, 262154, 0, 262146, 262155, 0, 196609, 262156, 0, 131076, 327681, 0, 131072, 327682, 0, 131076, 327691, 0, 131072, 327692, 0, 131076, 393217, 0, 131072, 393218, 0, 131076, 393227, 0, 131072, 393228, 0, 131076, 458753, 0, 131072, 458754, 0, 131076, 458762, 0, 1, 458763, 0, 65537, 458764, 0, 131076, 524289, 0, 131072, 524290, 0, 131076, 524298, 0, 131072, 524299, 0, 196611, 524300, 0, 262147, 589825, 0, 131072, 589826, 0, 131076, 589830, 0, 65536, 589831, 0, 2, 589832, 0, 2, 589833, 0, 2, 589834, 0, 65537, 589835, 0, 131076, 655361, 0, 131072, 655362, 0, 131076, 655366, 0, 131072, 655367, 0, 196611, 655368, 0, 262146, 655369, 0, 262146, 655370, 0, 262146, 655371, 0, 262147, 720897, 0, 131072, 720898, 0, 65539, 720899, 0, 2, 720900, 0, 2, 720901, 0, 2, 720902, 0, 65537, 720903, 0, 131076, 786433, 0, 196608, 786434, 0, 262146, 786435, 0, 262146, 786436, 0, 262146, 786437, 0, 262146, 786438, 0, 262146, 786439, 0, 196612 )

[node name="walls and floors" type="TileMap" parent="Background/Tilemaps"]
tile_set = ExtResource( 9 )
cell_size = Vector2( 48, 48 )
cell_custom_transform = Transform2D( 48, 0, 0, 48, 0, 0 )
format = 1
tile_data = PoolIntArray( 262146, 5, 2, 262147, 5, 2, 262148, 5, 2, 262149, 5, 2, 262150, 5, 2, 262151, 5, 2, 262152, 5, 2, 262153, 5, 2, 262154, 5, 2, 262155, 5, 2, 393218, 7, 65538, 393219, 7, 65538, 393220, 7, 65538, 393221, 7, 65538, 393222, 7, 65538, 393223, 7, 65538, 393224, 7, 65538, 393225, 7, 65538, 393226, 7, 65538, 393227, 7, 65538, 458754, 7, 65538, 458755, 7, 65538, 458756, 7, 65538, 458757, 7, 65538, 458758, 7, 65538, 458759, 7, 65538, 458760, 7, 65538, 458761, 7, 65538, 458762, 7, 65538, 458763, 7, 65538, 524290, 5, 2, 524291, 5, 2, 524292, 5, 2, 524293, 5, 2, 524294, 5, 2, 524295, 7, 65538, 524296, 7, 65538, 524297, 7, 65538, 524298, 7, 65538, 589830, 7, 65538, 589831, 7, 65538, 589832, 7, 65538, 589833, 7, 65538, 589834, 7, 65538, 655362, 7, 65538, 655363, 7, 65538, 655364, 7, 65538, 655365, 7, 65538, 655366, 7, 65538, 720898, 7, 65538, 720899, 7, 65538, 720900, 7, 65538, 720901, 7, 65538, 720902, 7, 65538 )

[node name="carpets" type="TileMap" parent="Background/Tilemaps"]
tile_set = ExtResource( 8 )
cell_size = Vector2( 48, 48 )
cell_custom_transform = Transform2D( 48, 0, 0, 48, 0, 0 )
format = 1

[node name="fence" type="TileMap" parent="Background/Tilemaps"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 48, 48 )
cell_custom_transform = Transform2D( 48, 0, 0, 48, 0, 0 )
format = 1

[node name="Sprites" type="Node2D" parent="Background"]
__meta__ = {
"_edit_lock_": true
}

[node name="Clock2" type="Sprite" parent="Background/Sprites"]
position = Vector2( 261, 423 )
texture = ExtResource( 2 )

[node name="Picture1" type="Sprite" parent="Background/Sprites"]
position = Vector2( 327, 240 )
texture = ExtResource( 3 )

[node name="ShelfsFrames5" type="Sprite" parent="Background/Sprites"]
position = Vector2( 402, 271 )
texture = ExtResource( 4 )
hframes = 4
frame = 1

[node name="ShelfsFrames8" type="Sprite" parent="Background/Sprites"]
position = Vector2( 543, 271 )
texture = ExtResource( 4 )
hframes = 4
frame = 1

[node name="ShelfsFrames" type="Sprite" parent="Background/Sprites"]
position = Vector2( 402, 234 )
texture = ExtResource( 4 )
hframes = 4
frame = 1

[node name="ShelfsFrames6" type="Sprite" parent="Background/Sprites"]
position = Vector2( 210, 466 )
texture = ExtResource( 4 )
hframes = 4
frame = 1

[node name="ShelfsFrames7" type="Sprite" parent="Background/Sprites"]
position = Vector2( 261, 474 )
texture = ExtResource( 4 )
hframes = 4
frame = 3

[node name="ShelfsFrames2" type="Sprite" parent="Background/Sprites"]
position = Vector2( 210, 429 )
texture = ExtResource( 4 )
hframes = 4
frame = 1

[node name="ShelfsFrames4" type="Sprite" parent="Background/Sprites"]
position = Vector2( 543, 234 )
texture = ExtResource( 4 )
hframes = 4
frame = 1

[node name="WindowsFrames" type="Sprite" parent="Background/Sprites"]
position = Vector2( 447, 240 )
texture = ExtResource( 1 )
hframes = 8
frame = 3

[node name="WindowsFrames2" type="Sprite" parent="Background/Sprites"]
position = Vector2( 495, 240 )
texture = ExtResource( 1 )
hframes = 8
frame = 4

[node name="WindowsFrames3" type="Sprite" parent="Background/Sprites"]
position = Vector2( 267, 240 )
texture = ExtResource( 1 )
hframes = 8
frame = 4

[node name="WindowsFrames4" type="Sprite" parent="Background/Sprites"]
position = Vector2( 219, 240 )
texture = ExtResource( 1 )
hframes = 8
frame = 3

[node name="CurtainsFrames" type="Sprite" parent="Background/Sprites"]
position = Vector2( 474, 237 )
texture = ExtResource( 5 )
hframes = 3
frame = 2

[node name="CurtainsFrames2" type="Sprite" parent="Background/Sprites"]
position = Vector2( 249, 237 )
texture = ExtResource( 5 )
hframes = 3
frame = 2

[node name="Objects" type="Node2D" parent="Background"]
__meta__ = {
"_edit_lock_": true
}

[node name="YSort" type="YSort" parent="Background/Objects"]

[node name="Objects" type="YSort" parent="Background/Objects/YSort"]

[node name="bench vertical FRAMES" parent="Background/Objects/YSort/Objects" instance=ExtResource( 20 )]
position = Vector2( 537, 291 )

[node name="bench vertical FRAMES2" parent="Background/Objects/YSort/Objects" instance=ExtResource( 20 )]
position = Vector2( 405, 291 )

[node name="Door" type="Sprite" parent="Background/Objects/YSort/Objects"]
position = Vector2( 504, 465 )
texture = ExtResource( 13 )
offset = Vector2( 0, -9 )
vframes = 2

[node name="Door2" type="Sprite" parent="Background/Objects/YSort/Objects"]
position = Vector2( 309, 462 )
texture = ExtResource( 13 )
offset = Vector2( 0, -9 )
vframes = 2
frame = 1

[node name="fireplace" parent="Background/Objects/YSort/Objects" instance=ExtResource( 15 )]
position = Vector2( 141, 453 )

[node name="beds FRAMES" parent="Background/Objects/YSort/Objects" instance=ExtResource( 10 )]
position = Vector2( 312, 555 )

[node name="BookShelf" parent="Background/Objects/YSort/Objects" instance=ExtResource( 14 )]
position = Vector2( 147, 264 )

[node name="Sprite" parent="Background/Objects/YSort/Objects" instance=ExtResource( 21 )]
position = Vector2( 471, 288 )

[node name="Effects" type="Node2D" parent="Background"]
__meta__ = {
"_edit_lock_": true
}

[node name="Screen Effect" parent="Background/Effects" instance=ExtResource( 18 )]
position = Vector2( -157, -48 )
region_rect = Rect2( 1, 0, 1500, 1500 )
script = ExtResource( 19 )

[node name="wall roof" type="Node2D" parent="Background"]
__meta__ = {
"_edit_lock_": true
}

[node name="wall roof" type="TileMap" parent="Background/wall roof"]
tile_set = ExtResource( 11 )
cell_size = Vector2( 48, 48 )
cell_custom_transform = Transform2D( 48, 0, 0, 48, 0, 0 )
format = 1
tile_data = PoolIntArray( 458754, 0, 2, 458755, 0, 2, 458756, 0, 2, 458757, 0, 2, 458758, 0, 2, 458759, 0, 3, 524295, 0, 131076, 589831, 0, 131076 )

[node name="Fade" parent="." instance=ExtResource( 12 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -591.0
margin_top = -492.0
margin_right = -509.0
margin_bottom = -407.0
rect_scale = Vector2( 6, 6 )

[node name="ContinueButton" type="Button" parent="VBoxContainer" groups=["buttons"]]
margin_right = 82.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../QuickButton")
focus_neighbour_bottom = NodePath("../NewGameButton")
disabled = true
text = "CONTINUE"

[node name="NewGameButton" type="Button" parent="VBoxContainer" groups=["buttons"]]
margin_top = 20.0
margin_right = 82.0
margin_bottom = 36.0
focus_neighbour_top = NodePath("../ContinueButton")
focus_neighbour_bottom = NodePath("../OptionButton")
text = "NEW GAME"

[node name="OptionButton" type="Button" parent="VBoxContainer" groups=["buttons"]]
margin_top = 40.0
margin_right = 82.0
margin_bottom = 56.0
focus_neighbour_top = NodePath("../NewGameButton")
focus_neighbour_bottom = NodePath("../QuickButton")
disabled = true
text = "OPTION"

[node name="QuickButton" type="Button" parent="VBoxContainer" groups=["buttons"]]
margin_top = 60.0
margin_right = 82.0
margin_bottom = 76.0
focus_neighbour_top = NodePath("../OptionButton")
focus_neighbour_bottom = NodePath("../ContinueButton")
text = "QUIT"

[node name="Label" type="Label" parent="."]
margin_left = 849.0
margin_top = 81.0
margin_right = 949.0
margin_bottom = 104.0
rect_scale = Vector2( 9, 9 )
text = "ASPI: 
PROLOGUE"

[node name="Question" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.168627, 0.266667, 0.501961 )

[node name="Panel" type="Panel" parent="Question"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -324.0
margin_top = -198.0
margin_right = -216.0
margin_bottom = -141.0
rect_scale = Vector2( 6, 6 )

[node name="Label" type="Label" parent="Question"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -471.0
margin_top = -143.0
margin_right = -314.0
margin_bottom = -133.0
rect_scale = Vector2( 6, 6 )
text = "Delete saves?"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Question"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -720.0
margin_top = -45.0
margin_right = -480.0
margin_bottom = -22.0
rect_min_size = Vector2( 32, 0 )
rect_scale = Vector2( 6, 6 )
alignment = 1

[node name="DeleteButton" type="Button" parent="Question/HBoxContainer" groups=["buttons"]]
margin_left = 75.0
margin_right = 117.0
margin_bottom = 23.0
rect_min_size = Vector2( 32, 0 )
focus_neighbour_top = NodePath("../CancelButton")
focus_neighbour_bottom = NodePath("../CancelButton")
text = "Delete"

[node name="CancelButton" type="Button" parent="Question/HBoxContainer" groups=["buttons"]]
margin_left = 121.0
margin_right = 164.0
margin_bottom = 23.0
rect_min_size = Vector2( 32, 0 )
focus_neighbour_top = NodePath("../DeleteButton")
focus_neighbour_bottom = NodePath("../DeleteButton")
text = "Cancel"

[connection signal="FadeInFinished" from="Fade" to="." method="_on_UI_FadeInFinished"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuickButton" to="." method="_on_QuickButton_pressed"]
[connection signal="pressed" from="Question/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="Question/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]

[editable path="Fade"]
